tests/snapshots/output_table_integration__edge_empty_section_name.snap
---
source: tests/output_table_integration.rs
expression: result
---
String                                                       | Tags |  Score | Section
-------------------------------------------------------------|------|--------|--------
with empty section                                           |      |      0 |
