tests/snapshots/output_table_integration__edge_many_tags_truncated.snap
---
source: tests/output_table_integration.rs
expression: result
---
String                                                       | Tags |  Score | Section
-------------------------------------------------------------|------|--------|--------
multi-tagged                                                 | url  |    100 | .data
