tests/snapshots/output_table_integration__edge_very_short_string.snap
---
source: tests/output_table_integration.rs
expression: result
---
String                                                       | Tags |  Score | Section
-------------------------------------------------------------|------|--------|--------
a                                                            |      |     10 |        
ab                                                           |      |     20 |        
abc                                                          |      |     30 |
