tests/snapshots/output_table_integration__edge_zero_score.snap
---
source: tests/output_table_integration.rs
expression: result
---
String                                                       | Tags |  Score | Section
-------------------------------------------------------------|------|--------|--------
zero score string                                            |      |      0 | .data
