tests/snapshots/output_table_integration__plain_multiple_strings.snap
---
source: tests/output_table_integration.rs
expression: result
---
https://malware.example.com/beacon
C:\Windows\System32\cmd.exe
GetProcAddress
