tests/snapshots/output_table_integration__plain_preserves_special_characters.snap
---
source: tests/output_table_integration.rs
expression: result
---
tab	here
pipe|here
quote"here
line1\nline2
