tests/snapshots/output_table_integration__plain_unicode_strings.snap
---
source: tests/output_table_integration.rs
expression: result
---
中文字符串
Русский
😀😁😂
